--- a/components/product-comp/product-comp.html
+++ b/components/product-comp/product-comp.html
@@ -8,5 +8,4 @@
 <button class="comp-cart-product-wish-button">
     <slot name="WishButtonContent"></slot>
 </button>
-<span class="product-added-success-message">Product added successfuly!</span>
-<span class="product-added-failure-message">Product could not be added.</span>
+<slot name="UiMessages"></slot>
